# TAI

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  pyproject.toml  requirements.txt
backend/: config.py  main.py  requirements.txt
backend/exporter/: pdf_export.py
backend/models/: database.py  entities.py  schemas.py
backend/parser/: __init__.py  custom_parser.py  itc2007_parser.py  persistence.py  types.py
backend/routers/: analytics.py  constraints.py  courses.py  curricula.py  events.py  rooms.py  schedule_config.py  solver.py  student_groups.py  subjects.py  teachers.py  timeslots.py  unavailability.py  upload.py
backend/services/: analytics_service.py  job_manager.py  problem_builder.py  results_cache.py  solver_service.py
data/: ensia.ctt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/analytics/: AdvisoryPanel.tsx  Analytics.module.css  BottleneckTable.tsx  CostOverTimeChart.tsx  FitnessCurve.tsx  RunningTimeChart.tsx  UtilizationChart.tsx
frontend/src/hooks/: useSSE.ts  useTheme.ts  useThemeColors.ts
frontend/src/pages/: ConstraintsPage.tsx  DashboardPage.tsx  EntitiesPage.tsx  LandingPage.module.css  LandingPage.tsx  Pages.module.css  SolverPage.tsx
src/algorithms/: __init__.py  csp.py  hill_climbing.py  simulated_annealing.py
src/core/: __init__.py  problem.py
tests/: test_algorithms.py  test_api.py  test_csp.py  test_parsers.py
tests/fixtures/: sample_custom.txt  sample_itc2007.ctt
(+33 files in other folders)
